...
  void Function(int)? onItemTapped;

  CustomNavBarRanking({
    Key? key,
    required this.selectedIndex,
    required this.onItemTapped,
  }) : super(key: const Key("NavBarRanking"));

  @override
  Widget build(BuildContext context) {
    return BottomNavigationBar(
      items: <BottomNavigationBarItem>[
        BottomNavigationBarItem(
...
